--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,7 @@
-     
+
+- name: Install Requirements
+        run:  pip install flask flask-wtf
+        
         # Nome do Workflow
 name: DevOpsLab Pipeline
 
